<resources>
    <string name="app_name">Nutrition Analysis</string>
    <string name="enter_each_ingredient_on_a_new_line">Enter each ingredient on a new line.</string>
    <string name="submit">Submit</string>
    <string name="qty">Qty</string>
    <string name="unit">Unit</string>
    <string name="food">Food</string>
    <string name="calories">Calories</string>
    <string name="weight">Weight</string>
    <string name="btn_continue">Continue</string>
    <string name="DETAILS_KEY">SummeryBottomSheet.NutritionDetails</string>
    <string name="fat">Fat</string>
</resources>