<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/teal_700"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_close" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/view_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_8dp"
            android:weightSum="5"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/qty"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/unit"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/food"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/calories"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/weight"
                android:textColor="@color/black" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_summery"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/dimen_8dp"
            tools:itemCount="4"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/btn_continue"
            app:layout_constraintTop_toBottomOf="@id/view_header"
            tools:listitem="@layout/item_summery" />
        <Button
            android:id="@+id/btn_continue"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginBottom="@dimen/dimen_8dp"
            android:background="@color/teal_700"
            android:text="@string/btn_continue"
            android:textColor="@color/white"
            android:textSize="@dimen/button_font_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>